--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 <!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
 <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
 <a href="Gaussian projection coordinate conversion.html" style="top: 5%;">高斯投影正反算坐标转换</a>
-<a href="transform.html" style="top: 20%;">大地坐标度分秒转换</a>
-<a href="auto contours.html" style="top: 35%;">自动等值轴刻度颜色图例</a>
-<a href="webgis contour map.html" style="top: 50%;">等值线图在线渲染展示系统</a>
-<a href="Openstreet Rigon.html" style="top: 65%;">Open Street 行政区域查询</a>
+<a href="transform.html" style="top: 15%;">大地坐标度分秒转换</a>
+<a href="auto contours.html" style="top: 25%;">自动等值轴刻度颜色图例</a>
+<a href="webgis contour map origin.html" style="top: 35%;">等值线图在线渲染展示系统</a>
+<a href="webgis contour map.html" style="top: 45%;">等值线图在线渲染展示系统2</a>
+<a href="Openstreet Rigon.html" style="top: 55%;">Open Street 行政区域查询</a>
 </body>
 </html>
