--- a/position2coord/index.html
+++ b/position2coord/index.html
@@ -120,7 +120,7 @@
         position = yyy[i];
         getad(position);
         // console.log(aaa)
-        // console.log(coord)
+        // console.log(coord);
         coord0[i] = coord;
         var lng = coord.location.lon;
         var lat = coord.location.lat;
@@ -178,8 +178,8 @@
           var str = result2.slice(19);
           var str2 = str.slice(0, str.length - 1);
           coord = JSON.parse(str2);
-          // console.log("coord");
-          // console.log(coord);
+          console.log("coord");
+          console.log(coord);
         }
       });
       // console.log(json)
