--- a/arrow.html
+++ b/arrow.html
@@ -17,6 +17,8 @@
     <!-- <canvas id="myCanvas" style="float: left; width: 800px; height: 600px; border-width: 1px; z-index: 100;"></canvas> -->
     <div id="map"></div>
     <div style="position: absolute; padding: 10px; background-color: cornsilk;">
+        <div><button id="shili" style="width: 100%;">示例数据</button></div>
+        <br>
         <div>
             <input type="file" id="kmlFileInput" accept=".csv,.xlsx" onchange="geojsondata=readCSVFile(this)"
                 style="display: none" />
@@ -60,6 +62,7 @@
     <script>
         var geojsondata;
         var scalelatlng;
+        var no = 0;
         var vectormap = L.layerGroup();
 
         function drawcoord() {
@@ -162,7 +165,14 @@
 
             vectormap.addTo(map);
             // console.log(vectormap);
-            map.setView(L.latLng(lat, lng), 10);
+            if (no == 0) {
+                map.setView(L.latLng(lat, lng), 10);
+            } else {
+                map.panTo(L.latLng(lat, lng));
+            }
+            // 
+
+            i = 1;
         }
 
 
@@ -192,6 +202,11 @@
             }
             return datas;
         }
+
+        var $eleBtn1 = $("#shili");
+        $eleBtn1.click(function(){  
+            window.open("https://jet-nmemc.github.io/arrow/arrow.csv");
+        });
 
 
     </script>
