--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <a href="webgis contour map.html" style="top: 45%;">等值线图在线渲染展示系统2</a>
 <a href="Openstreet Rigon.html" style="top: 55%;">Open Street 行政区域查询</a>
 <a href="arrow.html" style="top: 65%;">矢量箭头图</a>
-<a href="position2coord/index.html" style="top: 75%;">地址转坐标</a>
+<a href="position2coord/index.html" style="top: 75%;">绘图保存</a>
+<a href="location2coord.html" style="top: 85%;">地址转坐标</a>
 </body>
 </html>
